# dubz-banking

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  architecture.md  pyproject.toml  setup_dev.sh
.github/: copilot-instructions.md
backend/: requirements.txt
backend/app/: main.py
frontend/: app.py  requirements.txt
scripts/: report_generator.py  requirements.txt  scheduler.py
